--- a/style.css
+++ b/style.css
@@ -1,59 +1,60 @@
+*{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+*:focus{
+    outline: none;
+}
+
 body{
-    color: white;
-}
-main {
-    position: absolute;
-}
-
-.bg1 {
-    position: fixed;
-    top: 0;
-    left: 0;
     height: 100%;
     width: 100%;
+    color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
 }
 
-.bg2 {
-    background-color: darkblue;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+.bg-img{
     height: 100%;
     width: 100%;
-    opacity: 50%;
+    position: fixed;
+    background-image: url(bg.jpg);
+    background-size: cover;
+}
+
+.bg-img-outer{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: rgba(0, 0, 139, 0.503);
+}
+
+main{
+    z-index: 1;
 }
 
 h1,
 h3 {
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
     color: white;
-    position: relative;
     text-align: center;
-    left: 110%;
 }
 
 .form-div {
-    position: absolute;
     margin: auto;
-    left: 72%;
     width: 650px;
-    height: 1310px;
+    height: 1300px;
     border-radius: 7px;
     opacity: 85%;
     padding: 40px;
     background-color: rgb(2, 2, 67);
+    margin-bottom: 50px;
 }
-
-/* form {
-
-} */
 
 input:not(.radio) {
     border: 2px solid white;
     color: rgb(35, 35, 35);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: medium;
     border-radius: 5px;
     width: 640px;
@@ -65,7 +66,6 @@ input:not(.radio) {
 select{
     border: 2px solid white;
     color: rgb(35, 35, 35);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: medium;
     border-radius: 5px;
     width: 662px;
@@ -80,12 +80,10 @@ select{
     height: 1.3em;
 }
 .radio-box{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: medium;
     margin-bottom: 40px;
 }
 .check-box{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: medium;
 }
 input[type="checkbox"]{
@@ -95,12 +93,12 @@ input[type="checkbox"]{
 }
 label:not(.radio-box label){
     font-weight: bold;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 textarea{
+    width: 625px;
     padding: 15px;
     border-radius: 5px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    resize: none;
     font-size: medium;
 }
 
@@ -109,7 +107,6 @@ button[type=submit]{
     color: white;
     border-radius: 5px;
     border: none;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: medium;
     padding: auto;
     margin-top: 10px;
@@ -122,7 +119,4 @@ button[type=submit]{
 button[type=submit]:hover{
     background-color: rgb(34, 113, 53);
     color: darkgrey;
-
 }
-
-
